--- a/service/package.json
+++ b/service/package.json
@@ -24,10 +24,13 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/graphql": "^13.1.0",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.6.0",
     "apollo-server-express": "^3.13.0",
+    "bcrypt": "^5.1.1",
     "graphql": "^16.10.0",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^6.6.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
